--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,22 +4,21 @@ version: 0.1.4
 homepage: https://github.com/Conezi/face_camera
 
 environment:
-  sdk: '>=2.18.4 <4.0.0'
+  sdk: ">=3.8.1 <4.0.0"
   flutter: ">=2.5.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.11.0+2
-  google_mlkit_face_detection: ^0.12.0
+  camera: ^0.11.2
+  google_mlkit_face_detection: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^6.0.0
 
 flutter:
-
   plugin:
     platforms:
       android:
