chore: update ios and android build files

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -22,18 +22,17 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-
 android {
-    namespace "com.conezi.face_camera_example"
-    compileSdkVersion flutter.compileSdkVersion
+    namespace 'com.conezi.face_camera_example'
+    compileSdk flutter.compileSdkVersion
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     sourceSets {
@@ -60,4 +59,7 @@ android {
 
 flutter {
     source '../..'
+}
+
+dependencies {
 }
